--- a/Client/package.json
+++ b/Client/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/xiaoxiaojx/CampusMessageWall#readme",
   "devDependencies": {
     "@types/express": "^4.0.37",
+    "@types/material-ui": "^0.18.4",
     "@types/node": "^8.0.25",
     "@types/react": "^16.0.5",
     "@types/react-dom": "^15.5.4",
@@ -55,6 +56,7 @@
   },
   "dependencies": {
     "babel-preset-env": "^1.6.1",
+    "history": "^4.7.2",
     "material-ui": "^0.19.4",
     "mobx": "^3.3.1",
     "mobx-react": "^4.3.4",
