--- a/Server/package.json
+++ b/Server/package.json
@@ -14,7 +14,8 @@
     "debug": "~2.6.3",
     "express": "~4.15.2",
     "mongoose": "^4.13.4",
-    "morgan": "~1.8.1"
+    "morgan": "~1.8.1",
+    "multer": "^1.3.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.16.2",
