是的, 这个版本干了很多事, 主要的有加了评论和点赞功能, 以及代码优化等等

--- a/Server/tsconfig.json
+++ b/Server/tsconfig.json
@@ -1,33 +1,31 @@
 {
 	"compilerOptions": {
 		"module": "commonjs",
-		"target": "es5",
+		"target": "ES6",
 		"allowJs": true,
 		"allowSyntheticDefaultImports": true,
-		"jsx": "react",
 		"noImplicitAny": false,
-		"sourceMap": true,
-	    "strictNullChecks": true,
+		"sourceMap": false,
+//	    "strictNullChecks": true,
 		"experimentalDecorators": true,
 		"baseUrl": "./",
 		"noUnusedLocals": true,
         "checkJs": true,
         "lib":[
-            "dom",
             "es5",
             "es6",
             "es2015",
+            "es2016",
             "es7"
         ]
     },
     "types": [
-        "react",
-        "react-dom",
         "node"
     ],
     "include": [
-        "./**/*.ts",
-        "./**/*.tsx"
+        "./src/**/*.ts",
+        "./src/app.ts",
+        "./*.ts"
     ],
     "exclude": [
         "node_modules"
