--- a/Client/package.json
+++ b/Client/package.json
@@ -26,13 +26,12 @@
   "devDependencies": {
     "@types/express": "^4.0.37",
     "@types/node": "^8.0.25",
-    "@types/react": "^16.0.5",
+    "@types/react": "^15.6.1",
     "@types/react-dom": "^15.5.4",
     "@types/webpack": "^3.0.10",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
-    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
     "css-loader": "^0.28.5",
@@ -54,7 +53,6 @@
     "webpack-hot-middleware": "^2.18.2"
   },
   "dependencies": {
-    "babel-preset-env": "^1.6.1",
     "history": "^4.7.2",
     "material-ui": "^0.19.4",
     "mobx": "^3.3.1",
@@ -63,7 +61,7 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-markdown": "^3.0.2",
-    "react-quill": "^1.2.0",
+    "react-quill": "1.0.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2"
   }
