--- a/Server/tsconfig.json
+++ b/Server/tsconfig.json
@@ -6,7 +6,7 @@
 		"allowSyntheticDefaultImports": true,
 		"noImplicitAny": false,
 		"sourceMap": false,
-//	    "strictNullChecks": true,
+	    "strictNullChecks": true,
 		"experimentalDecorators": true,
 		"baseUrl": "./",
 		"noUnusedLocals": true,
