--- a/Client/package.json
+++ b/Client/package.json
@@ -63,6 +63,8 @@
     "react-markdown": "^3.0.2",
     "react-quill": "1.0.0",
     "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "react-swipe": "^5.1.0",
+    "swipe-js-iso": "^2.0.4"
   }
 }
