--- a/Client/package.json
+++ b/Client/package.json
@@ -59,6 +59,7 @@
     "mobx-react": "^4.3.4",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-lazy-load": "^3.0.13",
     "react-markdown": "^3.0.2",
     "react-quill": "1.0.0",
     "react-router": "^4.2.0",
