--- a/Client/package.json
+++ b/Client/package.json
@@ -28,19 +28,18 @@
     "@types/node": "^8.0.25",
     "@types/react": "^15.6.1",
     "@types/react-dom": "^15.5.4",
-    "@types/webpack": "^3.0.10",
+    "@types/webpack": "^3.8.8",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
     "css-loader": "^0.28.5",
-    "dll-link-webpack-plugin": "^2.0.3",
     "express": "^4.15.4",
-    "extract-text-webpack-plugin": "^3.0.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
     "html-loader": "^0.5.1",
-    "html-webpack-plugin": "^2.30.1",
+    "html-webpack-plugin": "^3.0.4",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
@@ -49,9 +48,10 @@
     "tslint": "^5.7.0",
     "typescript": "^2.4.2",
     "url-loader": "^0.5.9",
-    "webpack": "^3.5.5",
-    "webpack-dev-middleware": "^1.12.0",
-    "webpack-hot-middleware": "^2.18.2"
+    "webpack": "^4.1.0",
+    "webpack-cli": "^2.0.10",
+    "webpack-dev-middleware": "^3.0.0",
+    "webpack-hot-middleware": "^2.21.2"
   },
   "dependencies": {
     "history": "^4.7.2",
