--- a/Client/package.json
+++ b/Client/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "CampusMessageWall",
+  "name": "xiaojiaxin.com",
   "version": "1.0.0",
-  "description": "a CampusMessageWall",
+  "description": "xiaojiaxin.com",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
