--- a/Server/package.json
+++ b/Server/package.json
@@ -17,7 +17,8 @@
     "express": "~4.15.2",
     "mongoose": "^4.13.4",
     "morgan": "~1.8.1",
-    "multer": "^1.3.0"
+    "multer": "^1.3.0",
+    "request": "^2.87.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.16.2",
